fixed lables and save button on small screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@
   line-height: 1.167em;
 }
 
-@media (width <= 375px) {
+@media (width <= 768px) {
   .card__title {
     padding: 4px 10px 5px;
   }
@@ -285,7 +285,7 @@
   max-inline-size: 357px;
 }
 
-@media (width <= 375px) {
+@media (width <= 768px) {
   .last-card__save-button {
     flex-direction: column;
   }
